--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             Sevgi, mutluluk, huzur aradığımda, <br />
             Sen benimsin, Kırklareli. <br />
         </p>
-        <h1 id="h1" style="color: #160000" class="md:text-7xl sm:text-6xl text-5xl pr-8">
+        <h1 id="h1" style="margin-left: -200px; margin-right: -50px; color: #160000" class="md:text-7xl sm:text-6xl text-5xl pr-8">
             Anonim <span class="spacer"></span> Uras
         </h1>
         <div id="heart" class="heart fixed">&hearts;</div>
@@ -110,7 +110,7 @@
     </div>
 
     <div class="fixed bottom-1 right-1">
-        <button onclick="sexFunc" target="_blank" class="text-gray-300 text-sm">powered by rana</button>
+        <button onclick="sexFunc()" target="_blank" class="text-gray-300 text-sm">powered by rana</button>
     </div>
     <div class="block">
         <audio id="myAudio">
